[gd_scene load_steps=30 format=3 uid="uid://dtq4vcdvnm7wq"]

[ext_resource type="Texture2D" uid="uid://d15sxfldby5cc" path="res://assets/swearingen_ext/grass.png" id="2_dke22"]
[ext_resource type="PackedScene" uid="uid://b8ylrko2443yc" path="res://scenes/ext_foliage_barrier.tscn" id="4_sv41r"]
[ext_resource type="PackedScene" uid="uid://7hyeih0id28c" path="res://scenes/trees.tscn" id="5_p6oy6"]
[ext_resource type="PackedScene" uid="uid://bts7w4rauw7rd" path="res://scenes/character_rigging.tscn" id="6_dke22"]
[ext_resource type="Texture2D" uid="uid://cu7ofdrqj67tj" path="res://assets/swearingen_ext/blindness.png" id="6_opqd1"]
[ext_resource type="PackedScene" uid="uid://bd4ubu1u4soyx" path="res://scenes/homework_enforcer.tscn" id="7_4qegb"]
[ext_resource type="PackedScene" uid="uid://de6qiq7iv1eq2" path="res://scenes/barbs.tscn" id="7_xyj84"]
[ext_resource type="PackedScene" uid="uid://dd20mrs7kurc0" path="res://scenes/swearingen_int.tscn" id="8_2eouu"]
[ext_resource type="PackedScene" uid="uid://bfevsxyulkj0u" path="res://scenes/swearingen_front.tscn" id="8_faw0r"]
[ext_resource type="PackedScene" uid="uid://lg62ores86w" path="res://assets/WoodenChair.glb" id="9_2eouu"]
[ext_resource type="PackedScene" uid="uid://c2uwp8i55m063" path="res://scenes/audio_stream_player_2d.tscn" id="10_rccsh"]
[ext_resource type="Shader" uid="uid://co5mrwx5cpfkx" path="res://shaders/vhs_shader.gdshader" id="11_ax7ne"]
[ext_resource type="PackedScene" uid="uid://p0rts1quxqfe" path="res://assets/locker_object/Locker_2.0.glb" id="13_m0xki"]
[ext_resource type="FontFile" uid="uid://c0mmods3fkcwu" path="res://font/lycanthrope.ttf" id="13_opqd1"]
[ext_resource type="PackedScene" uid="uid://dyk7fgdhpx3lw" path="res://scenes/book_2_1.tscn" id="13_xe3hh"]
[ext_resource type="Texture2D" uid="uid://dsfqivph7t3km" path="res://assets/crosshair.png" id="13_xyj84"]
[ext_resource type="PackedScene" uid="uid://dwd371bk7g7b2" path="res://scenes/table1.tscn" id="14_p6oy6"]
[ext_resource type="Script" path="res://scenes/door_trigger.gd" id="16_opqd1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4xowi"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_a202f"]
sky_material = SubResource("ProceduralSkyMaterial_4xowi")

[sub_resource type="Environment" id="Environment_noarx"]
background_mode = 2
sky = SubResource("Sky_a202f")
tonemap_mode = 2
glow_enabled = true
fog_light_color = Color(0.8627451, 0.7411765, 0.7019608, 1)
fog_light_energy = 1.35
fog_density = 0.0153
volumetric_fog_density = 0.0819
volumetric_fog_albedo = Color(0.84635025, 0.53849566, 0.4448008, 1)
volumetric_fog_emission = Color(0.20498183, 0.17219684, 0.15908125, 1)
volumetric_fog_emission_energy = 0.65
volumetric_fog_length = 108.04

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2eouu"]
albedo_color = Color(0.3779188, 0.37791887, 0.37791884, 1)
albedo_texture = ExtResource("2_dke22")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_faw0r"]
size = Vector3(11.991913, 1, 38.965332)

[sub_resource type="BoxShape3D" id="BoxShape3D_2eouu"]
size = Vector3(6.7456055, 4.518219, 50.7444)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gips2"]
albedo_texture = ExtResource("6_opqd1")

[sub_resource type="SphereMesh" id="SphereMesh_wsd7d"]
material = SubResource("StandardMaterial3D_gips2")
flip_faces = true
radius = 35.036
height = 38.628
is_hemisphere = true

[sub_resource type="BoxShape3D" id="BoxShape3D_p6oy6"]
size = Vector3(1.3184204, 1.5766602, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sv41r"]
shader = ExtResource("11_ax7ne")
shader_parameter/grain_strength = 0.1
shader_parameter/grain_scale = 2.0
shader_parameter/static_speed = 0.3
shader_parameter/noise_intensity = 0.034000001615
shader_parameter/vhs_line_strength = 0.0030000001425
shader_parameter/vhs_line_density = 300.0
shader_parameter/vhs_line_speed = 0.5
shader_parameter/scanline_variation = 0.02
shader_parameter/scanline_shimmer_intensity = 0.01
shader_parameter/desaturate_amount = 0.03
shader_parameter/color_shift_amount = 0.022000001045
shader_parameter/color_quantization_amount = 0.0
shader_parameter/chroma_shift = 0.0010000000475
shader_parameter/chroma_vertical_shift = 0.001
shader_parameter/chroma_flicker_amount = 0.005
shader_parameter/chroma_flicker_speed = 0.0
shader_parameter/jitter_strength = 0.0010000000475
shader_parameter/jitter_speed = 0.1210000057475
shader_parameter/red_strength = 0.0
shader_parameter/red_decay = 0.33600001596
shader_parameter/ghost_offset = 0.0
shader_parameter/ghost_intensity = 0.0
shader_parameter/scratch_strength = 0.05
shader_parameter/scratch_speed = 0.5
shader_parameter/dust_intensity = 0.03
shader_parameter/dust_speed = 0.2
shader_parameter/dust_size = 3.0
shader_parameter/streak_intensity = 0.03
shader_parameter/streak_speed = 0.1
shader_parameter/flicker_strength = 0.08
shader_parameter/flicker_speed = 1.6
shader_parameter/vignette_strength = 0.6
shader_parameter/vignette_tint_amount = 0.02
shader_parameter/glitch_chance = 0.0
shader_parameter/glitch_intensity = 0.0
shader_parameter/glitch_speed = 0.0
shader_parameter/frame_jitter_intensity = 0.0
shader_parameter/bleed_strength = 0.0
shader_parameter/barrel_amount = 0.0
shader_parameter/roll_intensity = 0.0
shader_parameter/roll_speed = 0.0
shader_parameter/flare_intensity = 0.0
shader_parameter/flare_size = 0.0
shader_parameter/hblur_amount = 0.0
shader_parameter/rgb_roll_intensity = 0.0
shader_parameter/rgb_roll_speed = 0.0
shader_parameter/noir_mode = false
shader_parameter/noir_contrast = 1.2
shader_parameter/effect_mix = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_opqd1"]
size = Vector3(3.3787537, 7.4921417, 8.122391)

[node name="World" type="Node3D"]

[node name="map" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="map"]
environment = SubResource("Environment_noarx")

[node name="CSGBox3D" type="CSGBox3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.060791016, 0, -0.36898804)
use_collision = true
collision_mask = 2
size = Vector3(127.97119, 0, 137.55414)
material = SubResource("StandardMaterial3D_2eouu")

[node name="swearingen_front" parent="map" instance=ExtResource("8_faw0r")]
transform = Transform3D(-2.1200023e-08, 0, 0.485, 0, 0.485, 0, -0.485, 0, -2.1200023e-08, -0.4044304, 0.015040994, 30.507816)

[node name="StaticBody3D" type="StaticBody3D" parent="map/swearingen_front"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map/swearingen_front/StaticBody3D"]
transform = Transform3D(0.94721025, 0.32061297, -6.039613e-14, -0.32061297, 0.94721025, 0, 1.4210855e-13, 0, 1, 12.085876, 1.5867655, -0.0070791245)
shape = SubResource("BoxShape3D_faw0r")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="map/swearingen_front/StaticBody3D"]
transform = Transform3D(1, 0, -6.039613e-14, 0, 1, 0, 6.039613e-14, 0, 1, 2.8727837, 1.7591095, -0.07009983)
shape = SubResource("BoxShape3D_2eouu")

[node name="fence" parent="map" instance=ExtResource("4_sv41r")]
transform = Transform3D(0.484, 0, 0, 0, 0.484, 0, 0, 0, 0.484, 3.1, 0.90000004, 21.2)

[node name="foliage" type="Node3D" parent="map"]

[node name="trees" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.535, 0, 0, 0, 0.535, 0, 0, 0, 0.535, 13.3, 0, 17)

[node name="trees2" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.535, 0, 0, 0, 0.535, 0, 0, 0, 0.535, 13.3, 0, 2)

[node name="trees3" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.535, 0, 0, 0, 0.535, 0, 0, 0, 0.535, -14.7, 0, 17)

[node name="trees4" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.535, 0, 0, 0, 0.535, 0, 0, 0, 0.535, -14.7, 0, 2)

[node name="trees5" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(-2.3385594e-08, 0, -0.535, 0, 0.535, 0, 0.535, 0, -2.3385594e-08, -5.7, 0, -5)

[node name="trees6" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(-0.37830216, 0, 0.37830216, 0, 0.535, 0, -0.37830216, 0, -0.37830216, 7.3, 0, -7)

[node name="trees7" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.535, 0, 0, 0, 0.535, 0, 0, 0, 0.535, -24.7, 0, 9)

[node name="trees8" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(-0.37830213, 0, -0.37830213, 0, 0.535, 0, 0.37830213, 0, -0.37830213, -29.7, 0, 18)

[node name="trees9" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.13846819, 0, -0.5167703, 0, 0.535, 0, 0.5167703, 0, 0.13846819, -4.7, 0, -11)

[node name="trees10" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(-0.535, 0, 4.6771188e-08, 0, 0.535, 0, -4.6771188e-08, 0, -0.535, 24.3, 0, 16)

[node name="trees11" parent="map/foliage" instance=ExtResource("5_p6oy6")]
transform = Transform3D(0.37830216, 0, 0.3783021, 0, 0.535, 0, -0.3783021, 0, 0.37830216, 21.3, 0, -2)

[node name="blindness" type="MeshInstance3D" parent="map"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, -1, 17)
mesh = SubResource("SphereMesh_wsd7d")

[node name="barbs" parent="map" instance=ExtResource("7_xyj84")]
transform = Transform3D(0.465, 0, 0, 0, 0.465, 0, 0, 0, 0.465, 1.6, 3.6, 25.3)

[node name="swearingen_int" parent="map" instance=ExtResource("8_2eouu")]
transform = Transform3D(3.45, 0, 0, 0, 3.45, 0, 0, 0, 3.45, -54.98082, 0, 60.411636)

[node name="StaticBody3D" type="StaticBody3D" parent="map/swearingen_int"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="map/swearingen_int/StaticBody3D"]
transform = Transform3D(0.7064159, 0, -0.7077983, 0, 1.0000002, 0, 0.7077983, 0, 0.7064159, 20.940323, 0.28833032, 11.621496)
shape = SubResource("BoxShape3D_p6oy6")

[node name="HW_Enf_TEST_NOT WORKING" type="Node3D" parent="."]

[node name="HomeworkEnforcer" parent="HW_Enf_TEST_NOT WORKING" instance=ExtResource("7_4qegb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.3879375, 0, -27.592125)
patrol_points = Array[NodePath]([NodePath("../patrol1"), NodePath("../patrol2"), NodePath("../patrol3")])

[node name="patrol1" type="Node3D" parent="HW_Enf_TEST_NOT WORKING"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.1697845, 0, -40.50577)

[node name="patrol2" type="Node3D" parent="HW_Enf_TEST_NOT WORKING"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.82552, 0, -25.630222)

[node name="patrol3" type="Node3D" parent="HW_Enf_TEST_NOT WORKING"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.154572, 0, 1.1219025)

[node name="Character_Rigging" parent="." groups=["player"] instance=ExtResource("6_dke22")]
transform = Transform3D(0.62, 0, 0, 0, 0.62, 0, 0, 0, 0.62, -2.419732, -0.0446198, 11.072449)

[node name="Locker_2_0" parent="." instance=ExtResource("13_m0xki")]
transform = Transform3D(0.65, 0, 0, 0, 0.65, 0, 0, 0, 0.65, -5.139769, 0.025449991, -20.40974)

[node name="Locker_2_1" parent="." instance=ExtResource("13_m0xki")]
transform = Transform3D(-0.65, 0, -5.6824803e-08, 0, 0.65, 0, 5.6824803e-08, 0, -0.65, 5.179789, 0.02851516, -20.423203)

[node name="Tables" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.0380461, -1.0719706, -21.960152)

[node name="Table1" parent="Tables" instance=ExtResource("14_p6oy6")]

[node name="Table2" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8311744, -0.021278739, 0.007421255)

[node name="Table3" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.051235437, -0.020944476, -4.8028536)

[node name="Table4" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.8824098, -0.014403582, -4.795432)

[node name="Table5" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.102470875, -0.023373008, -9.605707)

[node name="Table6" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9336452, -0.016832113, -9.598286)

[node name="Table7" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15370631, -0.015284896, -14.408561)

[node name="Table8" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9848807, -0.016198277, -14.401139)

[node name="Table9" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20494175, -0.00706923, -19.211414)

[node name="Table10" parent="Tables" instance=ExtResource("14_p6oy6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.036116, -0.022622585, -19.20399)

[node name="Book_2_0" parent="." instance=ExtResource("13_xe3hh")]
transform = Transform3D(-2.1855694e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.1855694e-08, -2.0399761, 1.4207317, -21.649977)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
anchors_preset = -1
anchor_right = 0.15300001
anchor_bottom = 0.076000005
offset_left = 4.0
offset_top = 6.0
offset_right = 191.88
offset_bottom = 51.959988
theme_override_fonts/font = ExtResource("13_opqd1")
theme_override_font_sizes/font_size = 40
text = "Books: 0 / 5"

[node name="HoldPrompt" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="UI/HoldPrompt"]
layout_mode = 0
offset_left = -54.0
offset_top = 27.0
offset_right = 62.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("13_opqd1")
theme_override_font_sizes/font_size = 22
text = "Hold E to Enter"

[node name="Progress" type="ProgressBar" parent="UI/HoldPrompt"]
layout_mode = 0
offset_left = -54.0
offset_top = 54.0
offset_right = 102.0
offset_bottom = 60.0
max_value = 1.0
show_percentage = false

[node name="crosshair" type="TextureRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.075, 0.075)
pivot_offset = Vector2(257.265, 258.19)
texture = ExtResource("13_xyj84")

[node name="Book_2_1" parent="." instance=ExtResource("13_xe3hh")]
transform = Transform3D(5.9624403e-09, 0, -0.5, 0, 0.5, 0, 0.5, 0, 5.9624403e-09, 1.730756, 1.4035897, -21.585457)

[node name="WoodenChair" parent="." instance=ExtResource("9_2eouu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -24)

[node name="AudioStreamPlayer2D" parent="." instance=ExtResource("10_rccsh")]

[node name="Stamina" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Stamina"]
layout_mode = 3
anchor_left = 0.86200005
anchor_right = 1.0
anchor_bottom = 0.051000003
offset_left = -0.024047852
offset_bottom = -0.048000336

[node name="ProgressBar" type="ProgressBar" parent="Stamina/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.057000004
anchor_top = 0.15200001
anchor_right = 0.9620001
anchor_bottom = 1.0
offset_left = -0.06300068
offset_top = -0.01600027
offset_right = 0.041992188
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("13_opqd1")
theme_override_font_sizes/font_size = 25

[node name="filter" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="filter"]
material = SubResource("ShaderMaterial_sv41r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="teleport" type="Node3D" parent="."]

[node name="DoorTrigger" type="Area3D" parent="teleport"]
transform = Transform3D(-2.1200023e-08, 0, 0.485, 0, 0.485, 0, -0.485, 0, -2.1200023e-08, -0.40443045, 3.6437225, 28.872478)
script = ExtResource("16_opqd1")
teleport_target_path = NodePath("../TeleportMarker")
ui_hold_prompt_path = NodePath("../../UI/HoldPrompt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="teleport/DoorTrigger"]
transform = Transform3D(1, 0, -6.039613e-14, 0, 1, 0, 6.039613e-14, 0, 1, -1.9019508, 0.15526247, 0.031196594)
shape = SubResource("BoxShape3D_opqd1")

[node name="TeleportMarker" type="Marker3D" parent="teleport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.303783, 0.20393848, 104.99082)

[connection signal="body_entered" from="teleport/DoorTrigger" to="teleport/DoorTrigger" method="_on_body_entered"]
[connection signal="body_exited" from="teleport/DoorTrigger" to="teleport/DoorTrigger" method="_on_body_exited"]
